--- a/index.html
+++ b/index.html
@@ -42,7 +42,66 @@
           </nav>
           <!-- navbar end  -->
           <!-- slider stert -->
-          
+          <section class="container mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active border rounded bg-secondary p-5 ">
+                    <div class="row">
+                        <div class="col-7 d-flex align-items-center">
+                            <div>
+                                <h1>Coll dued Headphon</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati laborum aperiam perferendis et consectetur voluptas, beatae quaerat consequatur quidem explicabo ad dolores asperiores dicta cupiditate praesentium quas excepturi? Soluta?</p>
+                                <h2>$400</h2>
+                                <div class="btn btn-danger">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active border rounded bg-secondary p-5">
+                    <div class="row">
+                        <div class="col-7 d-flex align-items-center">
+                            <div>
+                                <h1>Coll dued Headphon</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati laborum aperiam perferendis et consectetur voluptas, beatae quaerat consequatur quidem explicabo ad dolores asperiores dicta cupiditate praesentium quas excepturi? Soluta?</p>
+                                <h2>$400</h2>
+                                <div class="btn btn-danger">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active border rounded bg-secondary p-5">
+                    <div class="row">
+                        <div class="col-7 d-flex align-items-center">
+                            <div>
+                                <h1>Coll dued Headphon</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati laborum aperiam perferendis et consectetur voluptas, beatae quaerat consequatur quidem explicabo ad dolores asperiores dicta cupiditate praesentium quas excepturi? Soluta?</p>
+                                <h2>$400</h2>
+                                <div class="btn btn-danger">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </section>
           <!-- slider end  -->
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
