--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <!-- navbar start -->
-        <nav class="navbar navbar-expand-lg bg-light container">
+        <nav class="navbar  fixed-top navbar-expand-lg bg-light container">
             <div class="container-fluid">
                 <nav class="navbar bg-light">
                     <div class="container">
@@ -28,13 +28,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#Back">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">submit</a>
+                    <a class="nav-link" href="#sub">submit</a>
                   </li>
                 </ul>
               </div>
@@ -130,7 +130,8 @@
               </div>
         </section>
         <!-- category end -->
-        <section class="container">
+        <section class="container" id="shoes">
+          <h2>shoes</h2>
           <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
             <div class="col">
               <div class="card border border-0 shadow-lg h-100">
@@ -173,7 +174,71 @@
             </div>
           </div>
         </section>
+        <!-- shoes end  -->
+        <!-- back pack start  -->
+        <section class="container my-5" id="Back" >
+          <h2>Backpack</h2>
+          <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3>120$</h3>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn-danger">Buy now</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h3>150$</h3>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn-danger">Buy now</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <h3>200$</h3>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn-danger">Buy now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- back pack and  -->
+        <!-- subsrcive start  -->
+        <section style="height: 290px;" class="container d-flex rounded-3 justify-content-center align-items-center bg-secondary" id="sub">
+          <div>
+            <h2>lets stay in touch</h2>
+          <p>Gets update on sales, special and more</p>
+          <form>
+            <div class="mb-1">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+          </div>
+        </section>
     </main>
+    <!-- footer stert -->
+    <footer class="container text-center my-5">
+      <p><small>@2020 panda commarce all right rejarved sofw.bulgaria</small></p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
