--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active border rounded bg-secondary p-5 ">
                     <div class="row">
-                        <div class="col-7 d-flex align-items-center">
+                        <div class="col-lg-7 d-flex align-items-center">
                             <div>
                                 <h1>Coll dued Headphon</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati laborum aperiam perferendis et consectetur voluptas, beatae quaerat consequatur quidem explicabo ad dolores asperiores dicta cupiditate praesentium quas excepturi? Soluta?</p>
@@ -55,14 +55,14 @@
                                 <div class="btn btn-danger">Buy Now</div>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                   </div>
                   <div class="carousel-item active border rounded bg-secondary p-5">
                     <div class="row">
-                        <div class="col-7 d-flex align-items-center">
+                        <div class="col-lg-7 d-flex align-items-center">
                             <div>
                                 <h1>Coll dued Headphon</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati laborum aperiam perferendis et consectetur voluptas, beatae quaerat consequatur quidem explicabo ad dolores asperiores dicta cupiditate praesentium quas excepturi? Soluta?</p>
@@ -70,14 +70,14 @@
                                 <div class="btn btn-danger">Buy Now</div>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                   </div>
                   <div class="carousel-item active border rounded bg-secondary p-5">
                     <div class="row">
-                        <div class="col-7 d-flex align-items-center">
+                        <div class="col-lg-7 d-flex align-items-center">
                             <div>
                                 <h1>Coll dued Headphon</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde obcaecati laborum aperiam perferendis et consectetur voluptas, beatae quaerat consequatur quidem explicabo ad dolores asperiores dicta cupiditate praesentium quas excepturi? Soluta?</p>
@@ -85,7 +85,7 @@
                                 <div class="btn btn-danger">Buy Now</div>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5">
                             <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
